test/syntaxerrors/TestMissingParensIF.jdc
int i = 10;

if i > 5 {
   println("yes");
}